feat(components): enhance UI of calendar component

--- a/apps/www/content/docs/components/calendar.mdx
+++ b/apps/www/content/docs/components/calendar.mdx
@@ -6,8 +6,26 @@ links:
   doc: https://react-day-picker.js.org
 ---
 
+## Default layout (buttons)
+
 <ComponentPreview
   name="calendar-demo"
+  title="Calendar"
+  description="A calendar showing the current date."
+/>
+
+## Dropdown layout
+
+<ComponentPreview
+  name="calendar-dropdown-demo"
+  title="Calendar"
+  description="A calendar showing the current date."
+/>
+
+## Dropdown layout (dropdown-buttons)
+
+<ComponentPreview
+  name="calendar-full-demo"
   title="Calendar"
   description="A calendar showing the current date."
 />
