--- a/apps/www/content/docs/components/command.mdx
+++ b/apps/www/content/docs/components/command.mdx
@@ -1,6 +1,6 @@
 ---
 title: Command
-description: Fast, composable, unstyled command menu for React.
+description: Fast, composable command menu for React.
 component: true
 links:
   doc: https://cmdk.paco.me
