Additional step created.

--- a/apps/www/content/docs/components/sidebar.mdx
+++ b/apps/www/content/docs/components/sidebar.mdx
@@ -90,6 +90,30 @@ We'll go over the colors later in the [theming section](/docs/components/sidebar
 
 <ComponentSource name="sidebar" />
 
+<Step>Copy and paste the following code into your project.</Step>
+
+```ts title="use-mobile.tsx"
+import * as React from "react"
+
+const MOBILE_BREAKPOINT = 768
+
+export function useIsMobile() {
+  const [isMobile, setIsMobile] = React.useState<boolean | undefined>(undefined)
+
+  React.useEffect(() => {
+    const mql = window.matchMedia(`(max-width: ${MOBILE_BREAKPOINT - 1}px)`)
+    const onChange = () => {
+      setIsMobile(window.innerWidth < MOBILE_BREAKPOINT)
+    }
+    mql.addEventListener("change", onChange)
+    setIsMobile(window.innerWidth < MOBILE_BREAKPOINT)
+    return () => mql.removeEventListener("change", onChange)
+  }, [])
+
+  return !!isMobile
+}
+```
+
 <Step>Update the import paths to match your project setup.</Step>
 
 <Step>Add the following colors to your CSS file</Step>
