--- a/apps/www/content/docs/components/navigation-menu.mdx
+++ b/apps/www/content/docs/components/navigation-menu.mdx
@@ -103,7 +103,7 @@ assign align type for content position
 assign width for every NavigationMenuContent
 
 
-`contentOptions={{ align: "start", contentWidth:  }}`
+`contentOptions={{ align: "start" }}`
 
 <ComponentPreview
   name="navigation-menu-options-demo"
