--- a/apps/www/content/docs/installation/vite.mdx
+++ b/apps/www/content/docs/installation/vite.mdx
@@ -95,7 +95,7 @@ Add the following code to the `tsconfig.app.json` file to resolve paths, for you
 
 ### Update vite.config.ts
 
-Add the following code to the vite.config.ts so your app can resolve paths without error:
+Add the following code to the `vite.config.ts` so your app can resolve paths without error:
 
 ```bash
 npm install -D @types/node
