--- a/apps/www/content/docs/blocks.mdx
+++ b/apps/www/content/docs/blocks.mdx
@@ -3,7 +3,7 @@ title: Add a block
 description: Contribute components to the blocks library.
 ---
 
-We are inviting the community to contribute to the blocks library. Share your components and blocks with other developers and help build a library of high-quality, reusable components.
+We are inviting the community to contribute to the [blocks library](/blocks). Share your components and blocks with other developers and help build a library of high-quality, reusable components.
 
 ## Setup your workspace
 
