docs: update block types

--- a/apps/www/content/docs/blocks.mdx
+++ b/apps/www/content/docs/blocks.mdx
@@ -5,6 +5,8 @@ description: Contribute components to the blocks library.
 
 We are inviting the community to contribute to the [blocks library](/blocks). Share your components and blocks with other developers and help build a library of high-quality, reusable components.
 
+We'd love to see all types of blocks: applications, marketing, products, and more.
+
 ## Setup your workspace
 
 <Steps>
