--- a/apps/www/content/docs/registry/open-in-v0.mdx
+++ b/apps/www/content/docs/registry/open-in-v0.mdx
@@ -53,3 +53,7 @@ export function OpenInV0Button({ url }: { url: string }) {
 ```jsx
 <OpenInV0Button url="https://example.com/r/hello-world.json" />
 ```
+
+## Known issues
+
+- The `Open in v0` button does not support `cssVars` and `tailwind` properties.
