--- a/apps/www/content/docs/registry/index.mdx
+++ b/apps/www/content/docs/registry/index.mdx
@@ -9,9 +9,7 @@ description: Run your own component registry.
   out to us](https://github.com/shadcn-ui/ui/discussions).
 </Callout>
 
-You can use the `shadcn` CLI to run your own component registry. Running your own
-component registry allows you to distribute your custom components, hooks, pages, and
-other files to any React project.
+You can use the `shadcn` CLI to run your own component registry. Running your own registry allows you to distribute your custom components, hooks, pages, and other files to any React project.
 
 <figure className="flex flex-col gap-4">
   <Image
@@ -39,4 +37,4 @@ Registry items are automatically compatible with the `shadcn` CLI and `Open in v
 
 You are free to design and host your custom registry as you see fit. The only requirement is that your registry items must be valid JSON files that conform to the [registry-item schema specification](/docs/registry/registry-item-json).
 
-If you'd like to see an example of a registry, we can have a [template project](https://github.com/shadcn-ui/registry-template) for you to use as a starting point.
+If you'd like to see an example of a registry, we have a [template project](https://github.com/shadcn-ui/registry-template) for you to use as a starting point.
