docs(www): add instructions to start the dev CLI

--- a/apps/www/content/docs/blocks.mdx
+++ b/apps/www/content/docs/blocks.mdx
@@ -29,6 +29,12 @@ git checkout -b username/my-new-block
 pnpm install
 ```
 
+### Start the dev CLI
+
+```bash
+pnpm shadcn:dev
+```
+
 ### Start the dev server
 
 ```bash
