fix(docs): update stepper documentation link to point to correct URL

--- a/apps/www/content/docs/components/stepper.mdx
+++ b/apps/www/content/docs/components/stepper.mdx
@@ -3,7 +3,7 @@ title: Stepper
 description: An opinionated stepper component for React to create step-by-step workflows.
 component: true
 links:
-  doc: https://stepperize.com/docs/react
+  doc: https://stepperize.vercel.app/docs/react
   api: https://stepperize.vercel.app/docs/react/api-references/define
 ---
 
