fix(docs): update stepper maintainer link to x

--- a/apps/www/content/docs/components/stepper.mdx
+++ b/apps/www/content/docs/components/stepper.mdx
@@ -11,7 +11,7 @@ links:
 
 ## About
 
-Stepperize is built and maintained by [damianricobelli](https://twitter.com/damianricobelli).
+Stepperize is built and maintained by [damianricobelli](https://x.com/damianricobelli).
 
 ## Installation
 
