feat: add responsive docs

--- a/apps/www/content/docs/components/stepper.mdx
+++ b/apps/www/content/docs/components/stepper.mdx
@@ -402,6 +402,13 @@ The `StepperAction` component is used to render the buttons to navigate through 
 
 If you need to render the stepper in a responsive way, you can use a custom hook to detect the screen size and render the stepper in a different variant.
 
+Please, resize the window to see the stepper in a different variant.
+
+<ComponentPreview
+  className="[&_.preview]:justify-start"
+  name="stepper-responsive-variant"
+/>
+
 ### Description
 
 ### Label Orientation
