docs: update description

--- a/apps/www/content/docs/components/stepper.mdx
+++ b/apps/www/content/docs/components/stepper.mdx
@@ -1,6 +1,6 @@
 ---
 title: Stepper
-description: An opinionated stepper component for React to create step-by-step workflows.
+description: Accessible stepper component to create step-by-step workflows.
 component: true
 links:
   doc: https://stepperize.vercel.app/docs/react
